Add html file structure

--- a/index.html
+++ b/index.html
@@ -9,7 +9,38 @@
     <title>Online Dice Game</title>
 </head>
 <body>
-    
+
+    <!-- heading and quote -->
+
+    <h1 id="heading">Roll The Dice</h1>
+    <p id="quote"><i>luck is in small things</i></p>
+
+    <!-- game area -->
+
+    <div class="game-area">
+        <a href="#" class="rules">
+            <i class="fa-solid fa-square-question"></i>
+        </a>
+
+        <!-- dice1 -->
+
+        <div class="dice-area" id="dice1">
+
+        <!-- dice2 -->
+
+        <div class="dice-area" id="dice2">
+        <button id="roll">roll</button>
+    </div>
+
+    <!-- score area -->
+    <div class="score-area">
+
+    <!-- score -->
+    <div id="score-section">
+
+     <!-- win -->
+     <div id="win-section">
+
  <!-- font awesome script -->
  <script src="https://kit.fontawesome.com/a08990c2fd.js" crossorigin="anonymous"></script>
  <script src="assets/js/script.js"></script>
