Adjust score styles

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 
         <!-- score -->
         <div id="score-section">
-            <h1 class="heading-score"><i class="fa fa-star" aria-hidden="true"></i>&nbsp;&nbsp;Scores</h1>
+            <p class="heading-score"><i class="fa fa-star" aria-hidden="true"></i>&nbsp;&nbsp;Scores</p>
             <p class="scores">You Scored:&nbsp;&nbsp;<span id="score-player">0</span></p>
             <p class="scores">Computer Scored:&nbsp;&nbsp;<span id="score-computer">0</span></p>
         </div>
 
         <!-- win -->
         <div id="win-section">
-            <h1 class="heading-score"><i class="fas fa-trophy"></i>&nbsp;&nbsp;Wins</h1>
+            <p class="heading-score"><i class="fas fa-trophy"></i>&nbsp;&nbsp;Wins</p>
             <p class="wins">Your Wins:&nbsp;&nbsp;<span id="win">0</span></p>
             <p class="wins">Computer's Wins:&nbsp;&nbsp;<span id="loose">0</span></p>
         </div>
