--- a/index.html
+++ b/index.html
@@ -13,10 +13,27 @@
      <!-- game area -->
      <div id="game-area">
         <h1 id="heading">Roll The Dice</h1>
-        <a href="#" class="rules">
-            <i class="fa-solid fa-square-question"></i>
-        </a>
- 
+        <!-- rules section -->
+        <div class="help">
+        <div class="question"><i class="fa-solid fa-circle-question"></i></div>
+        <div class="rules">
+            <h1>Rules</h1>
+    <p>
+        The rule of the game is for you to reach 10 Wins before the computer does.
+        <br><br>
+        Every 20 Score points is 1 Win point.
+        <br><br>
+        Each roll score is accumilated in the Score section until you get 20.
+        <br><br>
+        Apart from 6 regular dice sides, you'll have two jokers:
+        <br> - Colored (x2) doubles your current score;
+        <br> - B&W (x0) turns your current score to zero;
+        <br><br>
+        Before you can play the game, make sure you hit the "Roll" button below dices in middle section.
+        <br>Good Luck!
+    </p>
+        </div>
+        </div>
          <!-- dice1 -->
          <div class="dice-area" id="dice1">
              <p id="player-name">Edit Name <button id="player" onclick="editName()">&nbsp;&nbsp;X&nbsp;&nbsp;</button></p>
@@ -47,23 +64,7 @@
         </div>
     </div>
     </div>
- <!-- rules section -->
- <div class="rules">
-    <h1>Rules</h1>
-    <p>The rule of the game is for you to reach 10 Wins before the computer does.
-        <br><br>
-        Every 20 Score points is 1 Win point.
-        <br><br>
-        Each roll score is accumilated in the Score section until you get 20.
-        <br><br>
-        Apart from 6 regular dice sides, you'll have two jokers:
-        <br> - Colored (x2) doubles your current score;
-        <br> - B&W (x0) turns your current score to zero;
-        <br><br>
-        Before you can play the game, make sure you hit the "Roll" button below dices in middle section.
-        <br>Good Luck!
-    </p>
-</div>
+ 
  <!-- font awesome script -->
  <script src="https://kit.fontawesome.com/a08990c2fd.js" crossorigin="anonymous"></script>
  <script src="assets/js/script.js"></script>
