Add parameers for the end game

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <!-- win -->
         <div id="win-section">
             <p class="heading-score"><i class="fas fa-trophy"></i>&nbsp;&nbsp;Wins</p>
-            <p class="wins">Your Wins:&nbsp;&nbsp;<span id="win">0</span></p>
-            <p class="wins">Computer's Wins:&nbsp;&nbsp;<span id="loose">0</span></p>
+            <p class="wins">Your Wins:&nbsp;&nbsp;<span id="win-player">0</span></p>
+            <p class="wins">Computer's Wins:&nbsp;&nbsp;<span id="win-computer">0</span></p>
         </div>
         
      </div>
